[gd_scene load_steps=6 format=3 uid="uid://bydtp1enymluf"]

[ext_resource type="Texture2D" uid="uid://kodmii5cvgf0" path="res://assets/imagens/2.png" id="1_jlde0"]
[ext_resource type="Script" uid="uid://btk5kgyo4wlgm" path="res://scenes/pagina_02_conteudo.gd" id="1_od267"]
[ext_resource type="Texture2D" uid="uid://d2bt2wnsw2u40" path="res://assets/imagens/icone_som_ligado.png" id="3_k0gmy"]
[ext_resource type="Texture2D" uid="uid://ckbfylbxeme6w" path="res://assets/imagens/coracao (2).png" id="5_2d3h5"]
[ext_resource type="Texture2D" uid="uid://wvush02gnfol" path="res://assets/imagens/coracao.png" id="5_s67pk"]

[node name="Pagina02Conteudo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_od267")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_jlde0")

[node name="BotaoRetroceder" type="Button" parent="TextureRect"]
light_mask = 0
visibility_layer = 0
layout_mode = 0
offset_left = 19.0
offset_top = 913.0
offset_right = 68.0
offset_bottom = 962.0

[node name="BotaoAvancar" type="Button" parent="TextureRect"]
light_mask = 0
visibility_layer = 0
layout_mode = 0
offset_left = 700.0
offset_top = 920.0
offset_right = 741.0
offset_bottom = 958.0

[node name="BotaoSom" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 688.0
offset_top = 16.0
offset_right = 740.0
offset_bottom = 69.0
icon = ExtResource("3_k0gmy")
flat = true

[node name="LabelMoral" type="Label" parent="."]
layout_mode = 0
offset_left = 351.0
offset_top = 280.0
offset_right = 736.0
offset_bottom = 524.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "Essa bússola funciona através dos nossos sentimentos. Quando pensamos em fazer o certo, sentimos paz e orgulho. Quando pensamos em fazer o errado, sentimos um 'aperto no coração'. É a nossa moral nos guiando"
autowrap_mode = 2

[node name="LabelTexto" type="Label" parent="."]
layout_mode = 0
offset_left = 54.0
offset_top = 96.0
offset_right = 650.0
offset_bottom = 333.0
theme_override_font_sizes/font_size = 20
text = "Quando ninguém está olhando, uma voz interior nos diz o que devemos fazer. Isso é a Moral. Ela é a nossa bússola, formada pelos valores que aprendemos em casa e na comunidade. A Moral responde à pergunta: 'Qual é a coisa certa a fazer agora?"
autowrap_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 542.0
offset_top = 580.0
offset_right = 721.0
offset_bottom = 913.0
theme_override_colors/font_color = Color(0.6320438, 0, 0.0135261845, 1)
theme_override_font_sizes/font_size = 23
text = "A moral guia nossos pensamentos. Toque no coração do Léo e veja o que a bússola interna dele diz"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ParticulasCoracao" type="CPUParticles2D" parent="."]
position = Vector2(319, 807)
emitting = false
amount = 25
texture = ExtResource("5_s67pk")
lifetime = 2.11
one_shot = true
explosiveness = 0.8
randomness = 0.14
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2(1, -1.5)
gravity = Vector2(0, -50)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 0.0
scale_amount_max = 1.6
color = Color(1, 0, 0, 1)

[node name="BotaoCoracao" type="Button" parent="."]
layout_mode = 0
offset_left = 177.0
offset_top = 676.0
offset_right = 441.0
offset_bottom = 947.6666
icon = ExtResource("5_2d3h5")
flat = true

[connection signal="pressed" from="TextureRect/BotaoRetroceder" to="." method="_on_botao_retroceder_pressed"]
[connection signal="pressed" from="TextureRect/BotaoAvancar" to="." method="_on_botao_avancar_pressed"]
[connection signal="pressed" from="TextureRect/BotaoSom" to="." method="_on_botao_som_pressed"]
[connection signal="pressed" from="BotaoCoracao" to="." method="_on_botao_coracao_pressed"]
